# til

./: .gitignore  README.md  Untitled.ipynb
Algorithm/MIT_6.006/: 00.Introduction.ipynb  01.Peak finding.ipynb
Crawling/: 네이버금융_시가총액_페이지_크롤링.ipynb
Crawling/.ipynb_checkpoints/: 네이버금융_시가총액_페이지_크롤링-checkpoint.ipynb
League_of_Legends_predict_winning_team/: README.md
ch07_module/: Cargo.toml
ch09_errors/: Cargo.toml
data_science/: gibbs_sampling.ipynb  probability.ipynb  random_variable.ipynb
data_science_school/: random_variable.ipynb
design_patterns/: 01.singltone.py  02.factory.py  03.builder.py  05.adapter.py  06.composite.py  07.command.py  08.observer.py  09.bridge.py  10.strategy.py  11.state.py
django/: README.md
django_rest_framework/: requirements.txt
docker/: skaffold.yaml
project-A/: alb.tf  asg.tf  provider.tf  sg.tf
project-B/: .terraform.lock.hcl  data.tf  eks.tf  iam.tf  local.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf  version.tf  vpc.tf
rust/lib-tutorials/tokio-tutorial/: Cargo.toml
rust/lib-tutorials/tokio-tutorial/src/: main.rs
rust/lib-tutorials/warp-tutorial/: Cargo.toml
rust/lib-tutorials/warp-tutorial/src/: main.rs
rust/lib-tutorials/warp-tutorial/src/api/: hello.rs
rust/lib-tutorials/warp-tutorial/src/handlers/: hello_handler.rs  mod.rs
rust/lib-tutorials/warp-tutorial/src/routes/: hello_route.rs  mod.rs
statistics/: 01.확률의 정의와 성질.ipynb  02.확률의 의미.ipynb  04.베이즈정리와 분류.ipynb  05.기댓값.ipynb  06.분산과 표준편차.ipynb  07.베르누이 분포.ipynb  10.가우시안 정규분포.ipynb
terraform/: variables.tf
(+672 files in other folders)
