[package]
name = "tokio-tutorial"
version = "0.1.0"
authors = ["DonghyungKo <koko8624@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"]}
log = {version="0.4.11"}
env_logger = "0.7.*"
