[package]
name = "warp-tutorial"
version = "0.1.0"
authors = ["DonghyungKo <koko8624@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.0", features = ['macros']}
warp = "0.2.1"
console = "0.13.0"

